parser.output
Terminals which are not used

   CHAR_VAL
   MINUS_ASSIGN
   MULT_ASSIGN
   DIV_ASSIGN


Grammar

    0 $accept: program $end

    1 program: statements END
    2        | expression END

    3 statements: statement
    4           | statements statement

    5 statement: declaration ';'
    6          | expression ';'
    7          | assignment ';'
    8          | if_statement
    9          | while_statement
   10          | for_statement
   11          | compound_statement
   12          | return_statement ';'

   13 declaration: type ID
   14            | type ID '=' expression
   15            | type ID '[' INT_VAL ']'

   16 type: INT
   17     | FLOAT
   18     | CHAR_TYPE
   19     | VOID

   20 assignment: ID '=' expression
   21           | ID PLUS_ASSIGN expression

   22 expression: ID
   23           | INT_VAL
   24           | STRING_VAL
   25           | FLOAT_VAL
   26           | expression '+' expression
   27           | expression '-' expression
   28           | expression '*' expression
   29           | expression '/' expression
   30           | expression '%' expression
   31           | expression EQ expression
   32           | expression NE expression
   33           | expression LT expression
   34           | expression GT expression
   35           | expression LE expression
   36           | expression GE expression
   37           | expression AND expression
   38           | expression OR expression
   39           | NOT expression
   40           | '-' expression
   41           | ID INC
   42           | ID DEC
   43           | ID '(' ')'
   44           | ID '(' argument_list ')'
   45           | '(' expression ')'

   46 if_statement: IF '(' expression ')' statement
   47             | IF '(' expression ')' statement ELSE statement

   48 while_statement: WHILE '(' expression ')' statement

   49 for_statement: FOR '(' for_init ';' expression_opt ';' expression_opt ')' statement

   50 for_init: /* empty */
   51         | expression
   52         | assignment
   53         | declaration

   54 compound_statement: '{' statements '}'
   55                   | '{' '}'

   56 return_statement: RETURN
   57                 | RETURN expression

   58 expression_opt: /* empty */
   59               | expression

   60 argument_list: expression
   61              | argument_list ',' expression


Terminals, with rules where they appear

$end (0) 0
'%' (37) 30
'(' (40) 43 44 45 46 47 48 49
')' (41) 43 44 45 46 47 48 49
'*' (42) 28
'+' (43) 26
',' (44) 61
'-' (45) 27 40
'/' (47) 29
';' (59) 5 6 7 12 49
'=' (61) 14 20
'[' (91) 15
']' (93) 15
'{' (123) 54 55
'}' (125) 54 55
error (256)
INT_VAL (258) 15 23
FLOAT_VAL (259) 25
CHAR_VAL (260)
STRING_VAL (261) 24
ID (262) 13 14 15 20 21 22 41 42 43 44
INT (263) 16
FLOAT (264) 17
CHAR_TYPE (265) 18
VOID (266) 19
RETURN (267) 56 57
IF (268) 46 47
ELSE (269) 47
WHILE (270) 48
FOR (271) 49
AND (272) 37
OR (273) 38
NOT (274) 39
LE (275) 35
GE (276) 36
LT (277) 33
GT (278) 34
EQ (279) 31
NE (280) 32
INC (281) 41
DEC (282) 42
PLUS_ASSIGN (283) 21
MINUS_ASSIGN (284)
MULT_ASSIGN (285)
DIV_ASSIGN (286)
END (287) 1 2
UMINUS (288)
LOWER_THAN_ELSE (289)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1 2, on right: 0
statements (51)
    on left: 3 4, on right: 1 4 54
statement (52)
    on left: 5 6 7 8 9 10 11 12, on right: 3 4 46 47 48 49
declaration (53)
    on left: 13 14 15, on right: 5 53
type (54)
    on left: 16 17 18 19, on right: 13 14 15
assignment (55)
    on left: 20 21, on right: 7 52
expression (56)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    40 41 42 43 44 45, on right: 2 6 14 20 21 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40 45 46 47 48 51 57 59 60 61
if_statement (57)
    on left: 46 47, on right: 8
while_statement (58)
    on left: 48, on right: 9
for_statement (59)
    on left: 49, on right: 10
for_init (60)
    on left: 50 51 52 53, on right: 49
compound_statement (61)
    on left: 54 55, on right: 11
return_statement (62)
    on left: 56 57, on right: 12
expression_opt (63)
    on left: 58 59, on right: 49
argument_list (64)
    on left: 60 61, on right: 44 61


state 0

    0 $accept: . program $end

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    CHAR_TYPE   shift, and go to state 7
    VOID        shift, and go to state 8
    RETURN      shift, and go to state 9
    IF          shift, and go to state 10
    WHILE       shift, and go to state 11
    FOR         shift, and go to state 12
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15
    '{'         shift, and go to state 16

    program             go to state 17
    statements          go to state 18
    statement           go to state 19
    declaration         go to state 20
    type                go to state 21
    assignment          go to state 22
    expression          go to state 23
    if_statement        go to state 24
    while_statement     go to state 25
    for_statement       go to state 26
    compound_statement  go to state 27
    return_statement    go to state 28


state 1

   23 expression: INT_VAL .

    $default  reduce using rule 23 (expression)


state 2

   25 expression: FLOAT_VAL .

    $default  reduce using rule 25 (expression)


state 3

   24 expression: STRING_VAL .

    $default  reduce using rule 24 (expression)


state 4

   20 assignment: ID . '=' expression
   21           | ID . PLUS_ASSIGN expression
   22 expression: ID .
   41           | ID . INC
   42           | ID . DEC
   43           | ID . '(' ')'
   44           | ID . '(' argument_list ')'

    INC          shift, and go to state 29
    DEC          shift, and go to state 30
    PLUS_ASSIGN  shift, and go to state 31
    '='          shift, and go to state 32
    '('          shift, and go to state 33

    $default  reduce using rule 22 (expression)


state 5

   16 type: INT .

    $default  reduce using rule 16 (type)


state 6

   17 type: FLOAT .

    $default  reduce using rule 17 (type)


state 7

   18 type: CHAR_TYPE .

    $default  reduce using rule 18 (type)


state 8

   19 type: VOID .

    $default  reduce using rule 19 (type)


state 9

   56 return_statement: RETURN .
   57                 | RETURN . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    $default  reduce using rule 56 (return_statement)

    expression  go to state 35


state 10

   46 if_statement: IF . '(' expression ')' statement
   47             | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 36


state 11

   48 while_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 37


state 12

   49 for_statement: FOR . '(' for_init ';' expression_opt ';' expression_opt ')' statement

    '('  shift, and go to state 38


state 13

   39 expression: NOT . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 39


state 14

   40 expression: '-' . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 40


state 15

   45 expression: '(' . expression ')'

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 41


state 16

   54 compound_statement: '{' . statements '}'
   55                   | '{' . '}'

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    CHAR_TYPE   shift, and go to state 7
    VOID        shift, and go to state 8
    RETURN      shift, and go to state 9
    IF          shift, and go to state 10
    WHILE       shift, and go to state 11
    FOR         shift, and go to state 12
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15
    '{'         shift, and go to state 16
    '}'         shift, and go to state 42

    statements          go to state 43
    statement           go to state 19
    declaration         go to state 20
    type                go to state 21
    assignment          go to state 22
    expression          go to state 44
    if_statement        go to state 24
    while_statement     go to state 25
    for_statement       go to state 26
    compound_statement  go to state 27
    return_statement    go to state 28


state 17

    0 $accept: program . $end

    $end  shift, and go to state 45


state 18

    1 program: statements . END
    4 statements: statements . statement

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    CHAR_TYPE   shift, and go to state 7
    VOID        shift, and go to state 8
    RETURN      shift, and go to state 9
    IF          shift, and go to state 10
    WHILE       shift, and go to state 11
    FOR         shift, and go to state 12
    NOT         shift, and go to state 13
    END         shift, and go to state 46
    '-'         shift, and go to state 14
    '('         shift, and go to state 15
    '{'         shift, and go to state 16

    statement           go to state 47
    declaration         go to state 20
    type                go to state 21
    assignment          go to state 22
    expression          go to state 44
    if_statement        go to state 24
    while_statement     go to state 25
    for_statement       go to state 26
    compound_statement  go to state 27
    return_statement    go to state 28


state 19

    3 statements: statement .

    $default  reduce using rule 3 (statements)


state 20

    5 statement: declaration . ';'

    ';'  shift, and go to state 48


state 21

   13 declaration: type . ID
   14            | type . ID '=' expression
   15            | type . ID '[' INT_VAL ']'

    ID  shift, and go to state 49


state 22

    7 statement: assignment . ';'

    ';'  shift, and go to state 50


state 23

    2 program: expression . END
    6 statement: expression . ';'
   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '%' expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression
   37           | expression . AND expression
   38           | expression . OR expression

    AND  shift, and go to state 51
    OR   shift, and go to state 52
    LE   shift, and go to state 53
    GE   shift, and go to state 54
    LT   shift, and go to state 55
    GT   shift, and go to state 56
    EQ   shift, and go to state 57
    NE   shift, and go to state 58
    END  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    ';'  shift, and go to state 65


state 24

    8 statement: if_statement .

    $default  reduce using rule 8 (statement)


state 25

    9 statement: while_statement .

    $default  reduce using rule 9 (statement)


state 26

   10 statement: for_statement .

    $default  reduce using rule 10 (statement)


state 27

   11 statement: compound_statement .

    $default  reduce using rule 11 (statement)


state 28

   12 statement: return_statement . ';'

    ';'  shift, and go to state 66


state 29

   41 expression: ID INC .

    $default  reduce using rule 41 (expression)


state 30

   42 expression: ID DEC .

    $default  reduce using rule 42 (expression)


state 31

   21 assignment: ID PLUS_ASSIGN . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 67


state 32

   20 assignment: ID '=' . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 68


state 33

   43 expression: ID '(' . ')'
   44           | ID '(' . argument_list ')'

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15
    ')'         shift, and go to state 69

    expression     go to state 70
    argument_list  go to state 71


state 34

   22 expression: ID .
   41           | ID . INC
   42           | ID . DEC
   43           | ID . '(' ')'
   44           | ID . '(' argument_list ')'

    INC  shift, and go to state 29
    DEC  shift, and go to state 30
    '('  shift, and go to state 33

    $default  reduce using rule 22 (expression)


state 35

   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '%' expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression
   37           | expression . AND expression
   38           | expression . OR expression
   57 return_statement: RETURN expression .

    AND  shift, and go to state 51
    OR   shift, and go to state 52
    LE   shift, and go to state 53
    GE   shift, and go to state 54
    LT   shift, and go to state 55
    GT   shift, and go to state 56
    EQ   shift, and go to state 57
    NE   shift, and go to state 58
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64

    $default  reduce using rule 57 (return_statement)


state 36

   46 if_statement: IF '(' . expression ')' statement
   47             | IF '(' . expression ')' statement ELSE statement

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 72


state 37

   48 while_statement: WHILE '(' . expression ')' statement

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 73


state 38

   49 for_statement: FOR '(' . for_init ';' expression_opt ';' expression_opt ')' statement

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    CHAR_TYPE   shift, and go to state 7
    VOID        shift, and go to state 8
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    $default  reduce using rule 50 (for_init)

    declaration  go to state 74
    type         go to state 21
    assignment   go to state 75
    expression   go to state 76
    for_init     go to state 77


state 39

   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '%' expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression
   37           | expression . AND expression
   38           | expression . OR expression
   39           | NOT expression .

    $default  reduce using rule 39 (expression)


state 40

   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '%' expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression
   37           | expression . AND expression
   38           | expression . OR expression
   40           | '-' expression .

    $default  reduce using rule 40 (expression)


state 41

   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '%' expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression
   37           | expression . AND expression
   38           | expression . OR expression
   45           | '(' expression . ')'

    AND  shift, and go to state 51
    OR   shift, and go to state 52
    LE   shift, and go to state 53
    GE   shift, and go to state 54
    LT   shift, and go to state 55
    GT   shift, and go to state 56
    EQ   shift, and go to state 57
    NE   shift, and go to state 58
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    ')'  shift, and go to state 78


state 42

   55 compound_statement: '{' '}' .

    $default  reduce using rule 55 (compound_statement)


state 43

    4 statements: statements . statement
   54 compound_statement: '{' statements . '}'

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    CHAR_TYPE   shift, and go to state 7
    VOID        shift, and go to state 8
    RETURN      shift, and go to state 9
    IF          shift, and go to state 10
    WHILE       shift, and go to state 11
    FOR         shift, and go to state 12
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15
    '{'         shift, and go to state 16
    '}'         shift, and go to state 79

    statement           go to state 47
    declaration         go to state 20
    type                go to state 21
    assignment          go to state 22
    expression          go to state 44
    if_statement        go to state 24
    while_statement     go to state 25
    for_statement       go to state 26
    compound_statement  go to state 27
    return_statement    go to state 28


state 44

    6 statement: expression . ';'
   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '%' expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression
   37           | expression . AND expression
   38           | expression . OR expression

    AND  shift, and go to state 51
    OR   shift, and go to state 52
    LE   shift, and go to state 53
    GE   shift, and go to state 54
    LT   shift, and go to state 55
    GT   shift, and go to state 56
    EQ   shift, and go to state 57
    NE   shift, and go to state 58
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64
    ';'  shift, and go to state 65


state 45

    0 $accept: program $end .

    $default  accept


state 46

    1 program: statements END .

    $default  reduce using rule 1 (program)


state 47

    4 statements: statements statement .

    $default  reduce using rule 4 (statements)


state 48

    5 statement: declaration ';' .

    $default  reduce using rule 5 (statement)


state 49

   13 declaration: type ID .
   14            | type ID . '=' expression
   15            | type ID . '[' INT_VAL ']'

    '['  shift, and go to state 80
    '='  shift, and go to state 81

    $default  reduce using rule 13 (declaration)


state 50

    7 statement: assignment ';' .

    $default  reduce using rule 7 (statement)


state 51

   37 expression: expression AND . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 82


state 52

   38 expression: expression OR . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 83


state 53

   35 expression: expression LE . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 84


state 54

   36 expression: expression GE . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 85


state 55

   33 expression: expression LT . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 86


state 56

   34 expression: expression GT . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 87


state 57

   31 expression: expression EQ . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 88


state 58

   32 expression: expression NE . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 89


state 59

    2 program: expression END .

    $default  reduce using rule 2 (program)


state 60

   26 expression: expression '+' . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 90


state 61

   27 expression: expression '-' . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 91


state 62

   28 expression: expression '*' . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 92


state 63

   29 expression: expression '/' . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 93


state 64

   30 expression: expression '%' . expression

    INT_VAL     shift, and go to state 1
    FLOAT_VAL   shift, and go to state 2
    STRING_VAL  shift, and go to state 3
    ID          shift, and go to state 34
    NOT         shift, and go to state 13
    '-'         shift, and go to state 14
    '('         shift, and go to state 15

    expression  go to state 94


state 65

    6 statement: expression ';' .

    $default  reduce using rule 6 (statement)


state 66

   12 statement: return_statement ';' .

    $default  reduce using rule 12 (statement)


state 67

   21 assignment: ID PLUS_ASSIGN expression .
   26 expression: expression . '+' expression
   27           | expression . '-' expression
   28           | expression . '*' expression
   29           | expression . '/' expression
   30           | expression . '%' expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression
   37           | expression . AND expression
   38           | expression . OR expression
